# vernal

./: .gitignore  .prettierignore  LICENSE  README.md  app-config.yaml  catalog-info.yaml  docker-compose.yml  package.json  pyproject.toml
apolloGraphQL/: template.yaml
examples/: entities.yaml  mkdocs.yml
examples/template/content/: catalog-info.yaml
nextexpress_template/: NextExpress.yaml
nextexpress_template/backend/: Dockerfile
templates/: NextExpress.yaml  nextjs-apollo.yaml  nextjs-express.yaml  nextjs-fastapi.yaml  nextjs-typegraphql.yaml  test_template.yaml
