[tool.poetry]
name = "vernal"
version = "0.1.0"
description = ""
authors = ["Vernal <admin@vernal.dev>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-techdocs-core = "^1.3.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
dev = "yarn dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
